[package]
name = "zcs"
version = "0.3.7"
authors = ["Wspsxing <biluohc@qq.com>"]
description = "Useful tools collection."
edition = "2018"
repository = "https://github.com/biluohc/zipcs"
# documentation = "https://docs.rs/zipcs/"
readme = "readme.md"
keywords = ["unzip","charset","ping", "url", "ip"]
license = "MIT"
build = "build.rs"

[profile.release]
opt-level = 3
# lto = true
# debug = true 

[build-dependencies]
encoding = "0.2"
chardet = "0.2"
time = "0.1"

[dependencies.app]
version = "0.6.5"
# path = "../app" 
# git = "https://github.com/biluohc/app"
# branch = "master" 
# commit = ""

[dependencies]
nonblock-logger = { version = "0.1", features = [ "color" ] }
reqwest = { version = "0.10.0", default-features = false, features = ["rustls-tls", "gzip"] }
tokio = { version = "0.2.9", features = ["rt-core", "process", "time"] }
futures = "0.3.2"
percent-encoding = "1.0"
lazy_static = "1.4"
encoding = "0.2.33" # or replace with encoding_rs
filetime = "0.2.8"
chardet = "0.2.3"
chrono = "0.4.8"
regex = "1.3"
rayon = "1.3"
zip = "0.5"
