[package]
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"
name = "ac-example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac = {path = "../ac"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
